ProyectoFinal/force-app/main/default/objects/ProjectResource__c.object
<CustomObject>
    <fields>
        <fullName>AmountXResource__c</fullName>
        <formula>RatePerHour__c* TotalRegisterHours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AmountXResource</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EstimatedAmountXResource__c</fullName>
        <formula>RatePerHour__c * EstimatedHours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EstimatedAmountXResource</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EstimatedHours__c</fullName>
        <label>EstimatedHours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectLineItem__c</fullName>
        <label>ProjectLineItem</label>
        <referenceTo>ProjectLineItem__c</referenceTo>
        <relationshipLabel>ProjectResources</relationshipLabel>
        <relationshipName>ProjectResources</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RatePerHour__c</fullName>
        <formula>$User.RatePerHour__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RatePerHour</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Squad_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Squad Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TotalRegisterHours__c</fullName>
        <label>TotalRegisterHours</label>
        <summarizedField>Project_Task__c.RegisterHours__c</summarizedField>
        <summaryForeignKey>Project_Task__c.ProjectResource__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ProjectResources</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ProjectResource</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ProjectLineItem__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PR-{000}</displayFormat>
        <label>ProjectResource Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ProjectResources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>