ProyectoFinal/force-app/main/default/objects/ProjectResource__c/fields/RealAmountXRole__c.field-meta.xml
<CustomField>
    <fullName>RealAmountXRole__c</fullName>
    <formula>RealHours__c *User__r.RatePerHour__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RealAmountXRole</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>