ProyectoFinal/force-app/main/default/objects/ProjectResource__c/fields/RealHours__c.field-meta.xml
<CustomField>
    <fullName>RealHours__c</fullName>
    <label>RealHours</label>
    <summarizedField>Project_Task__c.RegisterHours__c</summarizedField>
    <summaryForeignKey>Project_Task__c.ProjectResource__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>